--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     </properties>
+
+
+    <dependencies>
+        <!-- 日志门面模式 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
+        <!-- 日志的具体实现 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
+        <!--需要 Logback 的配置文件支持（比如 XML 或 Groovy），则添加以下依赖（可选）-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.2.7</version>
+        </dependency>
+
+    </dependencies>
+
+
     <packaging>jar</packaging>
     <build>
         <plugins>
