--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,15 @@
             <version>1.2.7</version>
         </dependency>
 
+        <!-- test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 
